--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>El titulo del post</title>
-        <link rel="stylesheet" href="css/stilos.css" />
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-               Cabecera 
+               Hyperblog
+               <span if="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>este es el titulo atractivo e interesante del post</h1>
