--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,14 @@
 <html>
     <head>
         <title>El titulo del post</title>
-        <link rel="stylesheet" href="css/stilos.css" />
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="post">
                 <h1>este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
              </div>
         </div>
     </body>
