--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                Hyperblog
-               <span if="tagline">Tu blog de confianza</span>
+               <span if="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
+                <P>Suscribete y dale Like</P>
              </div>
         </div>
     </body>
