--- a/blogpost.html
+++ b/blogpost.html
@@ -11,9 +11,9 @@
                <span if="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&aacute;bles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar, Pero estadisticamente no lo eres.... por ahora.</p>
+                <h1>este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar, Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <P>Suscribete y dale Like</P>
              </div>
              <div id="footer">
