--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <div id="post">
                 <h1>eAqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/ANacional.jpg" width="100%"/></p>
+                <p><ahref="https://imgur.com/gallery/x5Ib9Vr"> <imgsrc="https://imgur.com/gallery/x5Ib9Vr" width="100%"title="X cosa" /></a></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar, Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <P>Suscribete y dale Like</P>
              </div>
